--- a/src/6-previews/0-overview.stories.mdx
+++ b/src/6-previews/0-overview.stories.mdx
@@ -71,6 +71,42 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
+									<a
+										className="act-card act-card__primary act-card__feature--icon"
+										href="https://www.figma.com/file/07TWQyWk4YAEVjhxNmFZ6L/ACT-Design-System?node-id=2436%3A43080&t=vZyNZsnA9UqAJXnC-1"
+										target="_blank"
+									>
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-universal-access"></i>
+												</div>
+												<div class="act-card__title">Access Canberra</div>
+												<div class="act-card__description">Figma Preview</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</a>
+									<a
+										className="act-card act-card__primary act-card__feature--icon"
+										href="https://www.figma.com/file/07TWQyWk4YAEVjhxNmFZ6L/ACT-Design-System?node-id=2826%3A42171&t=vZyNZsnA9UqAJXnC-1"
+										target="_blank"
+									>
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-building-columns"></i>
+												</div>
+												<div class="act-card__title">ACT Government</div>
+												<div class="act-card__description">Figma Preview</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</a>
 								</div>
 							</div>
 						</div>
